# rust_katas

./: Cargo.toml  LICENSE  README.md
src/: automorphic_number.rs  backspaces_in_string.rs  bookseller.rs  bool_to_word.rs  create_phone_number.rs  even_fib.rs  lib.rs  maximum_product.rs  multiple_3_5.rs  odd_or_even.rs  power_of_two.rs  rgb_conversion.rs  sentence_smash.rs  string_ends_with.rs  strong_number.rs  sum_of_cubes.rs  word_values.rs
